client/src/components/module/Nav/Nav.module.css
.logo {
  width: var(--logo-width);
}

.pseudo-container {
  --logo-width: 92px;
  --y-padding: 1.5em;

  background-color: var(--accent-color);
  width: calc(var(--logo-width) + var(--y-padding) * 2);
}

.container {
  position: fixed;
  height: 100vh;

  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2.25em var(--y-padding) 1.5em;
}

.nav {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  height: 100%;
  margin-top: 3em;
}

.nav-list {
  list-style-type: none;
  display: flex;
  flex-direction: column;
}

.nav-item a,
.nav-item button {
  display: flex;
  flex-direction: column;
  align-items: center;

  text-decoration: none;
  font-size: 1rem;
  color: inherit;
}

.nav-item button {
  background: transparent;
  width: 100%;
}

.nav-item {
  color: var(--text-color);
  transition: color 125ms ease-in;
}

.nav-item:hover,
.isSelected {
  color: var(--secondary-color);
}

.nav-item + .nav-item {
  margin-top: 2.5em;
}

.nav-icon {
  font-size: 40px;
  padding: 5px;
}

